k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules: 
    - host: sms.local # need to add to /etc/hosts later?      # replace (see secret.yaml)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service                             # replace
                port:
                  number: 80                                  # replace
